# income-classification-segmentation

./: .gitignore  README.md  notes.md  pyproject.toml
notebooks/: 01_eda.ipynb  02_classification.ipynb  03_segmentation.ipynb
outputs/models/: lgbm_classifier.joblib  segmentation_bundle.joblib
report/: compact.css  final_report.html  final_report.md
